# $Id: Changes,v 1.61 2003/10/06 04:01:03 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.61
	[FIXES]
	* Missing dependency on File::Temp.  Thanks, Ask.

	[ENHANCEMENTS]
	* Added the test case for the form processing problem as a .t
	  file, since I spent so long getting it down to a simple case.

0.60	September 22, 2003  10:00pm
	[FIXES]
	* Changed how t/failure.t tries to fail.  It used to hit
	  a bogus hostname in .com, but with Verisign doing its
	  SiteFinder crap, even bogus addresses in .com succeed.

	[ENHANCEMENTS]
	* Added _make_request() to let WWW::Mechanize::Cached easily
	  hook into the request chain.

0.59	September 3, 2003  11:56pm
	[FIXES]
	* Squelched a warning in follow() where it tries to do a regex
	  match against an undef value.
	* The page stack functionality, including the back() button,
	  was entirely broken.  Now it works.  Thanks to the mighty
	  Iain Truskett for help.

	[ENHANCEMENTS]
	* Added the mech-dump script, which replaces mech-forms.
	  It will dump forms and lists of links.  Eventually it will
	  do lists of images, too, but not yet.

0.58	August 14, 2003  11:30pm
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* $mech->uri() now returns a plain string, not a URI object.
	  The automatic stringification of the URI object was
	  causing problems on Win32 and/or threaded Perls, and I
	  didn't feel like figuring out why.  If the non-objectness
	  of the uri() method is a problem, let me know.
	* form(), form_name() and form_number() now return the
	  HTML::Form object of the form that was chosen.  They used
	  to return a 1 or 0.  This means that if you're explicitly
	  checking for 1 or 0, instead of evaluating the return
	  code in a boolean context, your code will break.

	[FIXES]
	* The <AREA>-handling in extract_links() was incorrectly
	  building the text.
	* uri() now returns a string, not a URI object.
	* form(), form_name() and form_number() now return the
	  HTML::Form object of the form that was chosen.
